# photon

./: .gitignore  Cargo.toml  README.md
crates/batch/: Cargo.toml
crates/batch/benches/: service.rs
crates/batch/src/: lib.rs
crates/batch/src/domain/: assembler.rs  interner.rs  mod.rs  service.rs  types.rs
crates/batch/src/inbound/: run.rs  thread.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/domain/: experiment.rs  mod.rs  project.rs  run.rs  tenant.rs
crates/core/src/ingest/: dedup.rs  mod.rs  service.rs
crates/core/src/pipeline/: accumulator.rs  ack_tracker.rs  batch_builder.rs  mod.rs  recovery.rs  sender.rs
crates/core/src/ports/: codec.rs  compress.rs  metadata_store.rs  metric_store.rs  mod.rs  resolver.rs  transport.rs  wal.rs
crates/core/src/types/: ack.rs  batch.rs  bucket.rs  config.rs  error.rs  event.rs  id.rs  ingest.rs  metric.rs  mod.rs  query.rs  resolution.rs  sequence.rs  stream.rs  subscription.rs  wal.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: lib.rs  main.rs
crates/dashboard/src/domain/: error.rs  mod.rs  service.rs
crates/dashboard/src/domain/ports/: commander.rs  mod.rs  querier.rs  subscriber.rs
crates/dashboard/src/inbound/: channel.rs  mod.rs
crates/dashboard/src/inbound/ui/: app.rs  mod.rs  sidebar.rs  theme.rs  viewport.rs
crates/dashboard/src/inbound/ui/panes/: comparison.rs  line_chart.rs  mod.rs
crates/dashboard/src/outbound/: http.rs  websocket.rs
crates/downsample/: Cargo.toml
crates/downsample/src/: compactor.rs  lib.rs  pyramid.rs  reducer.rs
crates/downsample/src/aggregator/: m4.rs  mod.rs  noop.rs
crates/downsample/src/ports/: aggregator.rs  mod.rs  selector.rs
crates/downsample/src/selector/: noop.rs
crates/flush/: Cargo.toml
crates/flush/src/: lib.rs
crates/flush/src/domain/: mod.rs  service.rs  types.rs
crates/flush/src/inbound/: run.rs  thread.rs
crates/hook/: Cargo.toml
crates/hook/src/: broadcast.rs  composite.rs  lib.rs  noop.rs
crates/hook/src/ports/: hook.rs
crates/ingest/: Cargo.toml
crates/ingest/benches/: service.rs
crates/ingest/src/domain/: dedup.rs  mod.rs  service.rs  wal_service.rs
crates/ingest/src/domain/ingest/: dedup.rs  mod.rs
crates/ingest/src/inbound/: grpc.rs  handler.rs
crates/ingest/src/outbound/: mod.rs
crates/persist/: Cargo.toml
crates/persist/src/domain/: changeset.rs  mod.rs  service.rs
crates/persist/src/domain/projections/: downsample.rs  mod.rs
crates/persist/src/domain/projections/downsample/: mod.rs  reducer.rs
crates/persist/src/inbound/: mod.rs  thread.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/benches/: codec.rs  compressor.rs
crates/protocol/src/: lib.rs
crates/protocol/src/codec/: mod.rs  postcard.rs
crates/protocol/src/codec/protobuf/: codec.rs  convert.rs  mod.rs  types.rs
crates/protocol/src/codec/protobuf/proto/: ingest.proto  query.proto
crates/protocol/src/compressor/: brotli.rs  lz4.rs  mod.rs  noop.rs  zstd.rs
crates/protocol/src/ports/: codec.rs  compress.rs  mod.rs
crates/query/: Cargo.toml
crates/query/src/domain/: message.rs  mod.rs  service.rs  subscription.rs  tier.rs
crates/query/src/inbound/: handler.rs  http.rs  mod.rs  ws.rs
crates/sdk/: Cargo.toml
crates/sdk/benches/: throughput.rs
crates/sdk/examples/: rust_api.rs  with_server.rs
crates/sdk/src/: accumulator.rs  builder.rs  error.rs  grpc.rs  interner.rs  lib.rs  run.rs
crates/sdk/src/compressor/: mod.rs
crates/sdk/src/compressors/: mod.rs
crates/sdk/src/domain/: assembler.rs  flush.rs  mod.rs  send.rs  service.rs  types.rs
crates/sdk/src/domain/pipeline/: accumulator.rs  ack_tracker.rs  assembler.rs  batch_builder.rs  interner.rs  mod.rs  pipeline.rs  recovery.rs  sender.rs
crates/sdk/src/domain/ports/: error.rs  mod.rs  resolver.rs  transport.rs  wal.rs
crates/sdk/src/inbound/: error.rs  mod.rs  run.rs
crates/sdk/src/outbound/: grpc.rs  mod.rs  transport.rs
crates/sdk/src/outbound/wal/: disk.rs  memory.rs  mod.rs  segment.rs
crates/sdk/src/wal/: disk.rs  memory.rs  mod.rs  segment.rs
crates/send/: Cargo.toml
crates/send/src/: lib.rs
crates/send/src/domain/: ack.rs  error.rs  mod.rs  service.rs
crates/send/src/inbound/: mod.rs  run.rs
crates/server/: Cargo.toml  build.rs
crates/server/benches/: throughput.rs
crates/server/examples/: wire.rs
crates/server/src/: dashboard.rs  main.rs
crates/server/src/domain/: mod.rs  service.rs
crates/server/src/domain/ports/: metadata_store.rs  metric_store.rs  mod.rs
crates/store/: Cargo.toml
crates/store/migrations/: 001_init.sql
crates/store/src/: lib.rs
crates/store/src/clickhouse/: bucket.rs  compaction.rs  experiment.rs  finalised.rs  finalized.rs  metric.rs  mod.rs  project.rs  rows.rs  run.rs  watermark.rs
crates/store/src/memory/: bucket.rs  compaction.rs  experiment.rs  finalised.rs  finalized.rs  metric.rs  mod.rs  project.rs  run.rs  watermark.rs
crates/store/src/ports/: bucket.rs  compaction.rs  experiment.rs  finalised.rs  finalized.rs  metadata.rs  metric.rs  mod.rs  project.rs  repository.rs  run.rs  watermark.rs
crates/store/src/postgres/: mod.rs
crates/subscription/: Cargo.toml
crates/subscription/src/: handler.rs  hook.rs  lib.rs
crates/subscription/src/domain/: service.rs  state.rs
crates/subscription/src/inbound/: events.rs  mod.rs  ws.rs
crates/transport/: Cargo.toml
crates/transport/src/: codec.rs  http.rs  lib.rs  ports.rs  tcp.rs
crates/transport/src/adapter/: http.rs  mod.rs  router.rs  tcp.rs  websocket.rs
crates/ui/: Cargo.toml
crates/ui/src/: envelope.rs  icon_rail.rs  lib.rs  panel_header.rs  tab_bar.rs  theme.rs  top_bar.rs
crates/uplink/: Cargo.toml
crates/uplink/src/: lib.rs
crates/uplink/src/domain/: ack.rs  error.rs  mod.rs  ports.rs  service.rs
crates/uplink/src/inbound/: adapter.rs  connection.rs  mod.rs  run.rs  state.rs  thread.rs
crates/wal/: Cargo.toml
crates/wal/src/: lib.rs  memory.rs  ports.rs  segment.rs
crates/wal/src/client/: mod.rs
crates/wal/src/disk/: mod.rs  segment.rs
crates/wal/src/server/: mod.rs
(+7 files in other folders)
