[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/protocol",
    "crates/transport",
    "crates/wal",
    "crates/batch",
    "crates/uplink",
    "crates/sdk",
    "crates/ingest",
    "crates/store",
    "crates/hook",
    "crates/downsample",
    "crates/query",
    "crates/server",
    "crates/dashboard",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tensaur/photon"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
bytes = { version = "1", features = ["serde"] }
anyhow = "1"
crossbeam-channel = "0.5"
crc32fast = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
postcard = { version = "1", features = ["alloc"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"
axum = "0.8"
lasso = { version = "0.7", features = ["multi-threaded"] }
rust-embed = "8"
brotli = "8"
lz4_flex = "0.13"
zstd = { version = "0.13", default-features = false }
ruzstd = "0.8"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.33"
egui_plot = "0.34"
egui_extras = "0.33"
egui_tiles = "0.14"
futures-channel = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
async-channel = "2"
gloo-net = { version = "0.6", default-features = false, features = ["websocket"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tracing-web = "0.1"
httparse = "1"
async-trait = "0.1"
dyn-clone = "1"
criterion = { version = "0.5", features = ["html_reports"] }
