[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/protocol",
    "crates/transport",
    "crates/wal",
    "crates/batch",
    "crates/uplink",
    "crates/sdk",
    "crates/ingest",
    "crates/store",
    "crates/hook",
    "crates/downsample",
    "crates/query",
    "crates/persist",
    "crates/subscription",
    "crates/server",
    "crates/dashboard",
    "crates/ui",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tensaur/photon"
publish = false

[workspace.lints.rust]
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"

[workspace.dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
bytes = { version = "1", features = ["serde"] }
anyhow = "1"
crossbeam-channel = "0.5"
crc32fast = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
postcard = { version = "1", features = ["alloc"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.24"
axum = "0.8"
lasso = { version = "0.7", features = ["multi-threaded"] }
rust-embed = "8"
brotli = "8"
lz4_flex = "0.13"
zstd = { version = "0.13", default-features = false }
ruzstd = "0.8"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "0.33"
egui_plot = "0.34"
egui_extras = "0.33"
egui_tiles = "0.14"
futures-channel = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
async-channel = "2"
gloo-net = { version = "0.6", default-features = false, features = ["websocket"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tracing-web = "0.1"
httparse = "1"
async-trait = "0.1"
clickhouse = { version = "0.13", features = ["uuid", "inserter"] }
criterion = { version = "0.5", features = ["html_reports"] }

# internal crates (published)
photon = { path = "crates/sdk", version = "0.1.1" }
photon-core = { path = "crates/core", version = "0.1.1" }
photon-protocol = { path = "crates/protocol", version = "0.1.1" }
photon-transport = { path = "crates/transport", version = "0.1.1" }
photon-wal = { path = "crates/wal", version = "0.1.1" }
photon-batch = { path = "crates/batch", version = "0.1.1" }
photon-uplink = { path = "crates/uplink", version = "0.1.1" }
photon-hook = { path = "crates/hook", version = "0.1.1" }

photon-ui = { path = "crates/ui" }

# internal crates (server-only)
photon-store = { path = "crates/store" }
photon-ingest = { path = "crates/ingest" }
photon-downsample = { path = "crates/downsample" }
photon-query = { path = "crates/query" }
photon-persist = { path = "crates/persist" }
photon-subscription = { path = "crates/subscription" }
