[package]
name = "photon-batch"
version.workspace = true
description = "Batch hexagon for Photon SDK"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
photon-core.workspace = true
photon-protocol.workspace = true
photon-wal.workspace = true

bytes.workspace = true
crc32fast.workspace = true
lasso.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true

[lib]
bench = false

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "service"
harness = false

[lints]
workspace = true
