[package]
name = "photon-core"
version = "0.0.0"
description = "Internal shared types for the Photon ecosystem"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes.workspace = true
chrono.workspace = true
dashmap.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
