[package]
name = "photon-core"
version.workspace = true
description = "Internal shared types for the Photon ecosystem"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
bytes.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js"] }

[lints]
workspace = true
