[package]
name = "photon-dashboard"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
photon-core = { path = "../core" }
photon-protocol = { path = "../protocol" }
photon-transport = { path = "../transport" }

eframe.workspace = true
egui.workspace = true
egui_plot.workspace = true
egui_extras.workspace = true
egui_tiles.workspace = true

uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { workspace = true, features = ["web_screen_reader"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
tracing-subscriber.workspace = true
tracing-web.workspace = true
