[package]
name = "photon-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
photon-core.workspace = true
photon-protocol.workspace = true
photon-transport.workspace = true
photon-ui.workspace = true

async-channel.workspace = true
eframe.workspace = true
egui.workspace = true
egui_plot.workspace = true
egui_extras.workspace = true
egui_tiles.workspace = true

uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { workspace = true, features = ["web_screen_reader"] }
futures-channel.workspace = true
futures-util.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Location"] }
tracing-subscriber.workspace = true
tracing-web.workspace = true

[lints]
workspace = true
