[package]
name = "photon-downsample"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
photon-core.workspace = true
photon-store.workspace = true

tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
