[package]
name = "photon-flush"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
photon-core = { path = "../core" }
photon-protocol = { path = "../protocol" }
photon-store = { path = "../store" }
photon-wal = { path = "../wal" }

anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
