[package]
name = "photon-hook"
version.workspace = true
description = "Library crate to create ingest extensions for Photon"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
photon-core.workspace = true
tokio = { workspace = true, features = ["sync"] }
