[package]
name = "photon-hook"
version.workspace = true
description = "Hook trait and broadcast primitives for reacting to Photon events"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
photon-core.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
tracing.workspace = true

[lints]
workspace = true
