[package]
name = "photon-ingest"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
photon-core = { path = "../core" }
photon-protocol = { path = "../protocol" }
photon-transport = { path = "../transport" }
photon-store = { path = "../store" }
photon-hook = { path = "../hook" }

tokio.workspace = true
tokio-stream.workspace = true
dashmap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
tracing.workspace = true
crc32fast.workspace = true

[lib]
bench = false

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "service"
harness = false
