[package]
name = "photon-ingest"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
photon-core = { path = "../core" }
photon-store = { path = "../store" }
photon-transport = { path = "../transport" }
photon-wal = { path = "../wal" }

tokio.workspace = true
dashmap.workspace = true
thiserror.workspace = true
tracing.workspace = true
crc32fast.workspace = true

[lib]
bench = false

[dev-dependencies]
photon-protocol = { path = "../protocol" }
bytes.workspace = true
criterion.workspace = true

[[bench]]
name = "service"
harness = false
