[package]
name = "photon-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
photon-core.workspace = true
photon-store.workspace = true
photon-transport.workspace = true
photon-wal.workspace = true

tokio.workspace = true
dashmap.workspace = true
thiserror.workspace = true
tracing.workspace = true
crc32fast.workspace = true

[lib]
bench = false

[dev-dependencies]
photon-protocol.workspace = true
bytes.workspace = true
criterion.workspace = true

[[bench]]
name = "service"
harness = false

[lints]
workspace = true
