[package]
name = "photon-persist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
photon-core.workspace = true
photon-protocol.workspace = true
photon-store.workspace = true
photon-wal.workspace = true

anyhow.workspace = true
futures-util.workspace = true
thiserror.workspace = true
bytes.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
