[package]
name = "photon-persist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
photon-core.workspace = true
photon-protocol.workspace = true
photon-store.workspace = true
photon-wal.workspace = true

thiserror.workspace = true
bytes.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
crc32fast.workspace = true

[lints]
workspace = true
