[package]
name = "photon-protocol"
version = "0.0.0"
description = "Internal codec and compression traits for Photon"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
photon-core = { path = "../core", version = "0.0.0" }

bytes.workspace = true
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
brotli.workspace = true
lz4_flex.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = { workspace = true, features = ["default"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ruzstd.workspace = true

[lib]
bench = false

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "compressor"
harness = false
