[package]
name = "photon-query"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
photon-core = { path = "../core" }
photon-protocol = { path = "../protocol" }
photon-transport = { path = "../transport" }
photon-store = { path = "../store" }
photon-downsample = { path = "../downsample" }

serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
