[package]
name = "photon-query"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
photon-core.workspace = true
photon-protocol.workspace = true
photon-transport.workspace = true
photon-store.workspace = true
photon-downsample.workspace = true

futures-util.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
