[package]
name = "photon"
version = "0.0.0"
description = "Client SDK for Photon"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[example]]
name = "rust_api"
path = "examples/rust_api.rs"

[dependencies]
photon-core = { path = "../core", version = "0.0.0" }
photon-protocol = { path = "../protocol", version = "0.0.0" }
photon-transport = { path = "../transport" }
photon-wal = { path = "../wal", version = "0.0.0" }
photon-batch = { path = "../batch", version = "0.0.0" }
photon-uplink = { path = "../uplink", version = "0.0.0" }

crossbeam-channel.workspace = true
lasso.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[lib]
bench = false

[[bench]]
name = "throughput"
harness = false
