[package]
name = "photon"
version.workspace = true
description = "Client SDK for Photon"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[[example]]
name = "rust_api"
path = "examples/rust_api.rs"

[dependencies]
photon-core.workspace = true
photon-protocol.workspace = true
photon-transport.workspace = true
photon-wal.workspace = true
photon-batch.workspace = true
photon-uplink.workspace = true

anyhow.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
lasso.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lib]
bench = false

[[bench]]
name = "throughput"
harness = false
