[package]
name = "photon-server"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "photon-server"
path = "src/main.rs"

[[example]]
name = "wire"
path = "examples/wire.rs"

[dependencies]
photon-protocol = { path = "../protocol" }
photon-store = { path = "../store" }
photon-downsample = { path = "../downsample" }
photon-ingest = { path = "../ingest" }
photon-query = { path = "../query" }
photon-transport = { path = "../transport" }
photon-hook = { path = "../hook" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

rust-embed = { workspace = true, optional = true, features = ["mime-guess"] }

[dev-dependencies]
photon = { path = "../sdk" }

[[bench]]
name = "throughput"
harness = false

[features]
dashboard = ["rust-embed"]
