[package]
name = "photon-server"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "photon-server"
path = "src/main.rs"

[[example]]
name = "wire"
path = "examples/wire.rs"

[dependencies]
photon-core = { path = "../core" }
photon-protocol = { path = "../protocol" }
photon-store = { path = "../store" }
photon-downsample = { path = "../downsample" }
photon-ingest = { path = "../ingest" }
photon-persist = { path = "../persist" }
photon-query = { path = "../query" }
photon-subscription = { path = "../subscription" }
photon-transport = { path = "../transport" }
photon-hook = { path = "../hook" }
photon-wal = { path = "../wal" }

tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true

rust-embed = { workspace = true, optional = true, features = ["mime-guess"] }

[dev-dependencies]
photon = { path = "../sdk" }

[[bench]]
name = "throughput"
harness = false

[features]
dashboard = ["rust-embed"]
