[package]
name = "photon-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "photon-server"
path = "src/main.rs"

[[example]]
name = "wire"
path = "examples/wire.rs"

[dependencies]
photon-core.workspace = true
photon-protocol.workspace = true
photon-store.workspace = true
photon-downsample.workspace = true
photon-ingest.workspace = true
photon-persist.workspace = true
photon-query.workspace = true
photon-transport.workspace = true
photon-wal.workspace = true

anyhow.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "rt-multi-thread"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

rust-embed = { workspace = true, optional = true, features = ["mime-guess"] }

[dev-dependencies]
photon.workspace = true

[[bench]]
name = "throughput"
harness = false

[features]
dashboard = ["rust-embed"]

[lints]
workspace = true
