[package]
name = "photon-store"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
photon-core = { path = "../core" }

anyhow.workspace = true
clickhouse.workspace = true
dashmap.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
