[package]
name = "photon-subscription"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
photon-core = { path = "../core" }
photon-hook = { path = "../hook" }
photon-transport = { path = "../transport" }

tokio.workspace = true
tracing.workspace = true
