[package]
name = "photon-subscription"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
photon-core.workspace = true
photon-hook.workspace = true
photon-transport.workspace = true

tokio.workspace = true
tracing.workspace = true
