[package]
name = "photon-transport"
version = "0.0.0"
description = "Transport traits and adapters for Photon"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
photon-protocol = { path = "../protocol", version = "0.0.0" }

async-channel.workspace = true
bytes.workspace = true
futures-util.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
httparse.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net.workspace = true
wasm-bindgen-futures.workspace = true
