[package]
name = "photon-transport"
version.workspace = true
description = "Transport traits and adapters for Photon"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
photon-protocol.workspace = true

async-channel.workspace = true
bytes.workspace = true
futures-util.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
axum = { workspace = true, features = ["ws"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net.workspace = true
wasm-bindgen-futures.workspace = true
