[package]
name = "photon-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
egui.workspace = true
egui_plot.workspace = true
egui-phosphor = { version = "0.11", default-features = false, features = ["regular"] }

[lints]
workspace = true
