[package]
name = "photon-uplink"
version = "0.0.0"
description = "Uplink hexagon for Photon SDK"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
photon-core = { path = "../core", version = "0.0.0" }
photon-transport = { path = "../transport" }
photon-wal = { path = "../wal", version = "0.0.0" }

thiserror.workspace = true
anyhow.workspace = true
crossbeam-channel.workspace = true
tokio.workspace = true
tracing.workspace = true
