[package]
name = "photon-uplink"
version.workspace = true
description = "Uplink hexagon for Photon SDK"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
photon-core.workspace = true
photon-transport.workspace = true
photon-wal.workspace = true

thiserror.workspace = true
anyhow.workspace = true
crossbeam-channel.workspace = true
tokio.workspace = true
tracing.workspace = true
