[package]
name = "photon-wal"
version.workspace = true
description = "WAL contracts and adapters for Photon"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
photon-core.workspace = true

thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
crc32fast.workspace = true
tracing.workspace = true
uuid.workspace = true
dyn-clone.workspace = true
